[metadata]
name = valentine
version = attr: valentine.__version__
url = https://github.com/jwflory/valentine
author = Skyler Jane Clark, Justin W. Flory
license = Other/Proprietary License
description = Draw swirls of hearts and print an expression of affection
long_description = file: README.md
long_description_content_type = text/markdown
keywords = valentine, cute, love, turtle
classifiers =
    Development Status :: 6 - Mature
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    License :: Other/Proprietary License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Topic :: Artistic Software
    Topic :: Multimedia :: Graphics

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
    valentine = valentine.valentine:main

[options.package_data]
* = *.txt, *.rst
